adicionando img de gato

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>Fanpage de Gatinhos</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Aqui vai um título</h1>
+    <h1>Perfil #catsoninstagram</h1>
+    <img src="https://png.pngtree.com/element_our/png/20181009/thai-cat-cream-tabby-sitting-png_131622.jpg" />
   </body>
 </html>
